# dptp-robusta-playbook

./: pyproject.toml
dptp_playbooks/: common.py  fetch_log_error.py  prow_alerts_playbook.py  sre_playbook.py
